QQuickText: respect new line width set by lineLaidOut() handler.

This commit makes text elide properly when custom layout is implemented.

Task-number: QTBUG-44025
Change-Id: Iefe344079c002d3a79aea18096a71667f6c17add
Reviewed-by: Andrew den Exter <andrew.den.exter@qinetic.com.au>